add english verification to app

--- a/views/index.erb
+++ b/views/index.erb
@@ -5,4 +5,5 @@
      <input id="word" name="word" class="form-control" type="text">
   </div>
   <button type="submit" class="btn-success">Calculate</button>
+  <h4 id="error" =><%= @message %></h4>
 </form>
